# NanoRL

./: Cargo.toml  avr-atmega328p.json  build.ps1  build.rs  readme.md
src/: main.rs  no_std_stuff.rs
src/game/: input.rs  mod.rs  rng.rs  tiles.rs
src/hal/: clock.rs  mod.rs  ports.rs  progmem.rs  register.rs  twi.rs  usart.rs
src/peripherals/: button.rs  display.rs  mod.rs
